--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
 <div class="jumbotron text-center">
   <h2>NỘI THẤT CHÍNH QUYÊN</h2> 
-  <p>Cửa hàng nội thất online - Hotline: 098 8888 935 - 096 643 6138</p> 
+  <p> Gọi ngay Hotline : 096 643 6138 - 09 88888 935 hoặc <a href="https://shopee.vn/shop/58343957/search" title="Nội thất Chính Quyên"> "Link gian hàng Shopee"</a></p>
 </div>
 
 <!-- Container (Sofa Section) -->
